fix slider btn overflow

--- a/src/Styles/background.css
+++ b/src/Styles/background.css
@@ -1,6 +1,7 @@
 .slider-div {
   /* padding-top: 77px; */
   padding-top: 0;
+  overflow: hidden;
 }
 
 .background-image-div {
